# drug_pricing

./: #main.py#  .#main.py  .#utils.py  .coveragerc  .env~  .gitignore  .sample-env  Drup Pricing Project - Descriptive Statistics.ipynb  MAT_word_clouds_word2vec 2.py  MAT_word_clouds_word2vec.ipynb  Makefile  NER_analysis.ipynb  Pipfile  README.md  __init__.py  build.py  constants.py  csvdiff.py  drug_pricing_analysis.ipynb  drug_pricing_deprecated.py  drug_pricing_pseudo  drug_pricing_pseudo 2.py  drug_pricing_pseudo.py  explore.bak.ipynb  explore.ipynb  explore_build.py  flycheck_pipeline.py  hpc_explore.ipynb  index.html  jackie_testing.py  lda_stripped.ipynb  lexical_divirsity.py  load.py  location_regex.py  main.py  mat_pseudo  narc_clean_for_stata.do  narc_ldagibbs.do  pipeline.py  profile.txt  (+16 more)
.github/workflows/: tests.yml
.metals/: metals.lock.db
airflow/: airflow.cfg  airflow.db  unittests.cfg
airflow/dags/: forum.py
airflow/utils/: load.py  post.py
analysis/: explore.ipynb  explore.py
legacy/: LF_testing.ipynb  drug_pricing_analysis.ipynb  drug_pricing_pseudo  location_regex.py  locations.py  r_opiates.py
notebooks/: analysis.txt  covid-data-prep.ipynb  covid.ipynb  dashboard.html  dashboard.ipynb  database-queries.ipynb  evaluation-analysis.ipynb  explore.bak.ipynb  explore.ipynb  location-inference-clustering.ipynb  praw.ipynb  progress-report.ipynb  summary.ipynb  test-env.ipynb  user-histories.ipynb  visuals.ipynb  word-usage.ipynb
notebooks/archive/: progress-report.ipynb  word-usage.ipynb
pipeline/: pipeline_funcs.py  post.py
resources/: ciara-test-set-labels.csv  clean-ciara-labels.csv  confidence_scorer.pk  geocoded-labels.pk  grouped-locations.csv  international.csv  metro_state_coord_map.pk  none_confidence_scorer.pk  pos_confidence_scorer.pk  subreddit_location_map.csv  test-set.csv
sample_data/: data.json
sample_data/comments/: opiates_14stmf.csv  opiates_158x4r.csv  opiates_15qniz.csv  opiates_16cp75.csv  opiates_16zdqj.csv  opiates_17a5v9.csv  opiates_18asoz.csv  opiates_19v5bz.csv  opiates_1a2hyw.csv  opiates_1g3bjv.csv  opiates_1gaekr.csv  opiates_1km4br.csv  opiates_1l69ek.csv  opiates_1l8drq.csv  opiates_1m4sy1.csv  opiates_1n6hzu.csv  opiates_1or7ju.csv  opiates_1qkjyd.csv  opiates_1qqqxo.csv  opiates_1sufww.csv  opiates_1t05rv.csv  opiates_1t8b3f.csv  opiates_1u3w1m.csv  opiates_1ubw68.csv  opiates_1uxpvq.csv  opiates_1wpv6x.csv  opiates_1wy91n.csv  opiates_1wylv7.csv  opiates_1x5my4.csv  opiates_1z2eb7.csv  opiates_1z4hbn.csv  opiates_20d9i1.csv  opiates_20xbsu.csv  opiates_21njiv.csv  opiates_22jp5z.csv  opiates_23o4wn.csv  opiates_24xotp.csv  opiates_25jsvb.csv  opiates_26t4fb.csv  opiates_27lwzl.csv  (+445 more)
sample_data/min_comments/: opiates_1b5j9v.csv
sample_data/threads/: r_opiates_1262304000_1293926400.csv  r_opiates_1293840000_1325462400.csv  r_opiates_1325376000_1357084800.csv  r_opiates_1356998400_1357084800.csv  r_opiates_1356998400_1357171200.csv  r_opiates_1356998400_1364860800.csv  r_opiates_1364860800_1372636800.csv  r_opiates_1372636800_1375315200.csv  r_opiates_1375315200_1380585600.csv  r_opiates_1380585600_1385856000.csv  r_opiates_1385856000_1388534400.csv  r_opiates_1388534400_1391126400.csv  r_opiates_1389052800_1389744000.csv  r_opiates_1391212800_1393632000.csv  r_opiates_1396310400_1397606400.csv  r_opiates_1397606400_1398902400.csv  r_opiates_1398902400_1400198400.csv  r_opiates_1400198400_1401580800.csv  r_opiates_1401580800_1402876800.csv  (+467 more)
scripts/: pipeline.py  user_histories.py
src/: __init__.py  __main__.py  histories.py  load.py  pipeline.py  post.py  scheduler.py  schema.py  spacy.py  utils.py
tasks/: #read_data.py#  files.py  mongo.py  praw.py  read_data.py
tests/: flycheck_test_scheduler 2.py  test_histories.py  test_pipeline.py  test_scheduler.py  test_schema.py  test_spacy.py  test_utils.py
utils/: explore_funcs.py  functions.py  pipeline.py  post.py
(+42 files in other folders)
