[tool.poetry]
name = "dp-scheduler"
version = "0.1.0"
description = "A tool for loading reddit data into a mongo db database"
authors = ["cccdenhart <cccdenhart@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blis = "==0.4.1"
catalogue = "==0.0.8"
certifi = "==2019.9.11"
chardet = "==3.0.4"
cymem = "==2.0.3"
idna = "==2.8"
importlib-metadata = "==0.23"
more-itertools = "==7.2.0"
murmurhash = "==1.0.2"
nltk = "==3.4.5"
numpy = "==1.17.4"
pandas = "==0.25.3"
plac = "==1.1.3"
praw = "==6.4.0"
prawcore = "==1.0.1"
preshed = "==3.0.2"
pymongo = "==3.9.0"
python-dateutil = "==2.8.1"
python-dotenv = "==0.10.3"
pytz = "==2019.3"
requests = "==2.22.0"
six = "==1.13.0"
spacy = "==2.2.3"
srsly = "==0.2.0"
thinc = "==7.3.1"
tqdm = "==4.38.0"
urllib3 = "==1.25.7"
wasabi = "==0.4.0"
zipp = "==0.6.0"
alembic = "==1.3.2"
apispec = "==3.1.1"
appnope = "==0.1.0"
argcomplete = "==1.10.3"
astroid = "==2.3.3"
attrs = "==19.3.0"
autopep8 = "==1.4.4"
backcall = "==0.1.0"
cached-property = "==1.5.1"
click = "==7.0"
colorama = "==0.4.3"
colorlog = "==4.0.2"
configparser = "==3.5.3"
croniter = "==0.3.30"
decorator = "==4.4.1"
defusedxml = "==0.6.0"
dill = "==0.3.1.1"
docutils = "==0.15.2"
entrypoints = "==0.3"
flake8 = "==3.7.9"
flask-swagger = "==0.2.13"
funcsigs = "==1.0.0"
future = "==0.16.0"
graphviz = "==0.13.2"
gunicorn = "==19.10.0"
ipykernel = "==5.1.3"
ipython = "==7.10.2"
iso8601 = "==0.1.12"
isort = "==4.3.21"
itsdangerous = "==1.1.0"
jedi = "==0.15.1"
json-merge-patch = "==0.2"
jsonschema = "==3.2.0"
jupyter-client = "==5.3.4"
jupyter-core = "==4.6.1"
lazy-object-proxy = "==1.4.3"
lockfile = "==0.12.2"
mccabe = "==0.6.1"
mypy = "==0.760"
mypy-extensions = "==0.4.3"
ordereddict = "==1.1"
parso = "==0.5.2"
pendulum = "==1.4.4"
pexpect = "==4.7.0"
pickleshare = "==0.7.5"
pluggy = "==0.13.1"
prison = "==0.1.0"
progressbar = "==2.5"
prompt-toolkit = "==3.0.2"
psaw = "==0.0.7"
psutil = "==5.6.7"
ptyprocess = "==0.6.0"
py = "==1.8.1"
pycodestyle = "==2.5.0"
pydocstyle = "==5.0.1"
pyflakes = "==2.1.1"
pylint = "==2.4.4"
pyparsing = "==2.4.6"
pyrsistent = "==0.15.6"
pytest = "==5.3.3"
python-daemon = "==2.1.2"
python-editor = "==1.0.4"
python-jsonrpc-server = "==0.3.2"
python-language-server = "==0.31.2"
python3-openid = "==3.1.0"
pytzdata = "==2019.3"
pyzmq = "==18.1.1"
rope = "==0.14.0"
setproctitle = "==1.1.10"
snowballstemmer = "==2.0.0"
tabulate = "==0.8.6"
tenacity = "==4.12.0"
termcolor = "==1.1.0"
text-unidecode = "==1.2"
thrift = "==0.13.0"
tornado = "==5.1.1"
traitlets = "==4.3.3"
typed-ast = "==1.4.0"
typing-extensions = "==3.7.4.1"
tzlocal = "==1.5.1"
ujson = "==1.35"
unicodecsv = "==0.14.1"
wcwidth = "==0.1.7"
wrapt = "==1.11.2"
yapf = "==0.29.0"
update_checker = "==0.16"
websocket_client = "==0.56.0"
Babel = "==2.7.0"
Flask = "==1.1.1"
Flask-Admin = "==1.5.3"
Flask-AppBuilder = "==1.13.1"
Flask-Babel = "==0.12.2"
Flask-Caching = "==1.3.3"
Flask-JWT-Extended = "==3.24.1"
Flask-Login = "==0.4.1"
Flask-OpenID = "==1.2.5"
Flask-SQLAlchemy = "==2.4.1"
Flask-WTF = "==0.14.2"
ipython_genutils = "==0.2.0"
Jinja2 = "==2.10.3"
Mako = "==1.1.0"
Markdown = "==2.6.11"
MarkupSafe = "==1.1.1"
Pygments = "==2.5.2"
PyJWT = "==1.7.1"
PyYAML = "==5.2"
SQLAlchemy = "==1.3.12"
Werkzeug = "==0.16.0"
WTForms = "==2.2.1"
"zope.deprecation" = "==4.4.0"
importmagic = "*"
etc = "*"
epc = "*"
nose = "*"
autoflake = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
