[tool.poetry]
name = "dp-scheduler"
version = "0.1.0"
description = "A tool for loading reddit data into a mongo db database"
authors = ["cccdenhart <cccdenhart@me.com>"]
packages = [
    { include = "src" }
]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
